--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,15 @@
 // Mixins in here
+.flexjus(@justify){
+    display: flex;
+    justify-content: @justify;
+    }
+    
+    .flexdir(@direction){
+    display: flex;
+    flex-direction: @direction;
+    }
+    
+    .bottombuttons(@button-bg,@white){
+        background-color:@button-bg;
+        color:@white; 
+    }
